header section complete

--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Influencer Gear</title>
-    <link rel="stylesheet" href="styles/index.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="styles/index.css" />
+    <script src="https://kit.fontawesome.com/15816fb69a.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <h3 class="nav-title">Influencer products</h3>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Signup</a></li>
+          <li><a href="#">Login</a></li>
+          <li>
+            <a href="#"><img src="images/icons/search.png" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="images/icons/cart.png" /></a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header-content-container">
+        <div class="header-content">
+          <h3 class="header-content-title">Start your Journey as Influencer</h3>
+          <p class="header-content-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
+            vestibulum sed scelerisque eros. Lectus faucibus.
+          </p>
+          <div class="btn-container">
+            <button class="primary-btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+          </div>
+        </div>
+        <div class="header-image">
+            <img src="images/main-camera.png" alt="">
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
