header section responsive finish

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             vestibulum sed scelerisque eros. Lectus faucibus.
           </p>
           <div class="btn-container">
-            <button class="primary-btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+            <button class="primary-btn">Prebook now <i class="fa-solid fa-arrow-right"></i></button>
           </div>
         </div>
         <div class="header-image">
