--- a/index.html
+++ b/index.html
@@ -40,5 +40,30 @@
         </div>
       </div>
     </header>
+    <main>
+        <section class="sponsor">
+            <img src="logos/Alibaba.svg" alt="">
+            <img src="logos/Amazon.svg" alt="">
+            <img src="logos/Daraz.pk Logo.svg" alt="">
+            <img src="logos/Ebay.svg" alt="">
+            <img src="logos/Rakuten.svg" alt="">
+            <img src="logos/Target.svg" alt="">
+            <img src="logos/Walmart.svg" alt="">
+        </section>
+        <section class="collection">
+            <h3 class="collection-title">Popular Collection</h3>
+            <div class="collection-container">
+                <img src="images/tripod.png" alt="">
+                <img src="images/mic.png" alt="">
+                <img src="images/airpod.png" alt="">
+                <img src="images/drone.png" alt="">
+                <img src="images/lights.png" alt="">
+                <img src="images/setup.png" alt="">
+                <img src="images/camera.png" alt="">
+                <img src="images/single-light.png" alt="">
+                <img src="images/action.png" alt="">
+            </div>
+        </section>
+    </main>
   </body>
 </html>
