--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Influencer Gear</title>
     <link rel="stylesheet" href="styles/index.css" />
-    <script src="https://kit.fontawesome.com/15816fb69a.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/15816fb69a.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -32,38 +35,108 @@
             vestibulum sed scelerisque eros. Lectus faucibus.
           </p>
           <div class="btn-container">
-            <button class="primary-btn">Prebook now <i class="fa-solid fa-arrow-right"></i></button>
+            <button class="primary-btn">
+              Prebook now <i class="fa-solid fa-arrow-right"></i>
+            </button>
           </div>
         </div>
         <div class="header-image">
-            <img src="images/main-camera.png" alt="">
+          <img src="images/main-camera.png" alt="" />
         </div>
       </div>
     </header>
     <main>
-        <section class="sponsor">
-            <img src="logos/Alibaba.svg" alt="">
-            <img src="logos/Amazon.svg" alt="">
-            <img src="logos/Daraz.pk Logo.svg" alt="">
-            <img src="logos/Ebay.svg" alt="">
-            <img src="logos/Rakuten.svg" alt="">
-            <img src="logos/Target.svg" alt="">
-            <img src="logos/Walmart.svg" alt="">
-        </section>
-        <section class="collection">
-            <h3 class="collection-title">Popular Collection</h3>
-            <div class="collection-container">
-                <img src="images/tripod.png" alt="">
-                <img src="images/mic.png" alt="">
-                <img src="images/airpod.png" alt="">
-                <img src="images/drone.png" alt="">
-                <img src="images/lights.png" alt="">
-                <img src="images/setup.png" alt="">
-                <img src="images/camera.png" alt="">
-                <img src="images/single-light.png" alt="">
-                <img src="images/action.png" alt="">
-            </div>
-        </section>
+      <section class="sponsor">
+        <img src="logos/Alibaba.svg" alt="" />
+        <img src="logos/Amazon.svg" alt="" />
+        <img src="logos/Daraz.pk Logo.svg" alt="" />
+        <img src="logos/Ebay.svg" alt="" />
+        <img src="logos/Rakuten.svg" alt="" />
+        <img src="logos/Target.svg" alt="" />
+        <img src="logos/Walmart.svg" alt="" />
+      </section>
+      <section class="collection">
+        <h3 class="collection-title">Popular Collection</h3>
+        <div class="collection-container">
+
+          <div class="card">
+            <img src="images/tripod.png" alt="" />
+            <h4 class="title">Flex Tripod</h4>
+            <p class="price">$50.48</p>
+            <p class="info">
+              Worldwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/mic.png" alt="" />
+            <h4 class="title">Microphone</h4>
+            <p class="price">$120.25</p>
+            <p class="info">
+              Worldwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/airpod.png" alt="" />
+            <h4 class="title">Airbuds</h4>
+            <p class="price">$100.00</p>
+            <p class="info">
+              Worldwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/drone.png" alt="" />
+            <h4 class="title">Drone</h4>
+            <p class="price">$980.25</p>
+            <p class="info">
+              Worldwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/lights.png" alt="" />
+            <h4 class="title">Light Setup</h4>
+            <p class="price">$1200.00</p>
+            <p class="info">
+              Worldwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/setup.png" alt="" />
+            <h4 class="title">Photoshoot set</h4>
+            <p class="price">$820.40</p>
+            <p class="info">
+              Worldwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/camera.png" alt="" />
+            <h4 class="title">Vlogging Camera</h4>
+            <p class="price">$1800.80</p>
+            <p class="info">
+              Worldwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/single-light.png" alt="" />
+            <h4 class="title">Green Screen</h4>
+            <p class="price">$25.48</p>
+            <p class="info">
+              Worldwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/action.png" alt="" />
+            <h4 class="title">Action Camera</h4>
+            <p class="price">$380.00</p>
+            <p class="info">
+              Worldwide shifting available Buyers protection possible!
+            </p>
+          </div>
+
+        </div>
+        <div class="see-more">
+            <h4>See More<i class="fa-solid fa-arrow-right"></i></h4>
+        </div>
+      </section>
     </main>
   </body>
 </html>
