featured section complete

--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
       <section class="collection">
         <h3 class="collection-title">Popular Collection</h3>
         <div class="collection-container">
-
           <div class="card">
             <img src="images/tripod.png" alt="" />
             <h4 class="title">Flex Tripod</h4>
@@ -131,10 +130,25 @@
               Worldwide shifting available Buyers protection possible!
             </p>
           </div>
-
         </div>
         <div class="see-more">
-            <h4>See More<i class="fa-solid fa-arrow-right"></i></h4>
+          <a href="#">See More<i class="fa-solid fa-arrow-right"></i></a>
+        </div>
+      </section>
+      <section class="featured">
+        <div class="featured-img">
+          <img src="images/gear.png" alt="" />
+        </div>
+        <div class="featured-content">
+          <h3 class="featured-title">Featured products at one place</h3>
+          <p class="featured-info">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+          <div class="featured-btn">
+            <button class="secondary-btn">Join Now<i class="fa-solid fa-arrow-right"></i></button>
+          </div>
         </div>
       </section>
     </main>
