--- a/index.html
+++ b/index.html
@@ -152,5 +152,18 @@
         </div>
       </section>
     </main>
+    <footer>
+        <div class="footer-content">
+            <h4>Influencer products</h4>
+            <p class="copyright">Copyright &copy; 2024  influencer products</p>
+            <p class="reserved">All rights reserved</p>
+        </div>
+        <div class="footer-img">
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-dribbble"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+        </div>
+    </footer>
   </body>
 </html>
